package com.directi.training.isp.exercice_refactor;

public interface IDoor {

    void lock();

    void unlock();

    void open();

    void close();
}
