package com.directi.training.isp.exercice_refactor;

public interface ISensingDoor extends IDoor {
    
    void proximityCallback();
}
