package com.directi.training.isp.exercice_refactor;

public interface ITimedDoor extends IDoor {
    
    void timeOutCallback();
}