@startuml

interface IDoor {
    +void lock()
    +void unlock()
    +void open()
    +void close()
}

interface ITimedDoor extends IDoor {
    +void timeOutCallback()
}

interface ISensingDoor extends IDoor {
    +void proximityCallback()
}

class TimedDoor implements ITimedDoor {
    -boolean _locked
    -boolean _opened
    -{static} final int TIMEOUT = 100
}

class SensingDoor implements ISensingDoor {
    -boolean _locked
    -boolean _opened
}

class Timer {
    +void register(int timeout, Door door)
}

class Sensor {
    +void register(Door door)
}


ISensingDoor <.. Sensor
ITimedDoor <.. Timer

TimedDoor ..> Timer
SensingDoor ..> Sensor




@enduml